// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Label > Snapshots > matches all sizes snapshot 1`] = `
<div
  data-testid="sizes-container"
>
  <label
    class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
  >
    Small
  </label>
  <label
    class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
  >
    Default
  </label>
  <label
    class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
  >
    Large
  </label>
</div>
`;

exports[`Label > Snapshots > matches all variants snapshot 1`] = `
<div
  data-testid="variants-container"
>
  <label
    class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
    variant="default"
  >
    Default
  </label>
  <label
    class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
    variant="destructive"
  >
    Destructive
  </label>
  <label
    class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
    variant="outline"
  >
    Outline
  </label>
  <label
    class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
    variant="secondary"
  >
    Secondary
  </label>
</div>
`;

exports[`Label > Snapshots > matches default snapshot 1`] = `
<label
  class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
>
  Default
</label>
`;

exports[`Label > Snapshots > matches disabled state snapshot 1`] = `
<label
  class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
  disabled=""
>
  Disabled
</label>
`;

exports[`Label > Snapshots > matches loading state snapshot 1`] = `
<label
  class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
>
  Loading
</label>
`;
